syntax = "proto3";
package MSG;

message Char {
	message CharacterTable {
		uint32 No = 1;
		string Name = 2;
		uint32 AttackRange = 3;
	}
	string TableName = 1;
	repeated CharacterTable Data = 2;
}

message Product {
	message ProductTable {
		uint32 No = 1;
		string ProductCode = 2;
		uint32 CharNo = 3;
		string VCType = 4;
		uint32 Value = 5;
	}
	string TableName = 1;
	repeated ProductTable Data = 2;
}

message WarriorStat {
	message WarriorStatTable {
		uint32 Level = 1;
		uint32 Exp = 2;
		uint32 Atk = 3;
		uint32 Def = 4;
		uint32 Hp = 5;
	}
	string TableName = 1;
	repeated WarriorStatTable Data = 2;
}

message ArcherStat {
	message ArcherStatTable {
		uint32 Level = 1;
		uint32 Exp = 2;
		uint32 Atk = 3;
		uint32 Def = 4;
		uint32 Hp = 5;
	}
	string TableName = 1;
	repeated ArcherStatTable Data = 2;
}

message CharTier {
	message CharTierTable {
		uint32 Tier = 1;
		string Buff1Type = 2;
		string Buff1Value = 3;
		string Buff2Type = 4;
		string Buff2Value = 5;
		string Buff3Type = 6;
		string Buff3Value = 7;
	}
	string TableName = 1;
	repeated CharTierTable Data = 2;
}

message DungeonTier {
	message DungeonTierTable {
		uint32 Tier = 1;
		string Buff1Type = 2;
		string Buff1Value = 3;
		string Buff2Type = 4;
		string Buff2Value = 5;
		string Buff3Type = 6;
		string Buff3Value = 7;
	}
	string TableName = 1;
	repeated DungeonTierTable Data = 2;
}

message MobAStat {
	message MobAStatTable {
		uint32 Level = 1;
		uint32 Exp = 2;
		uint32 Atk = 3;
		uint32 Def = 4;
		uint32 Hp = 5;
	}
	string TableName = 1;
	repeated MobAStatTable Data = 2;
}

message MobBStat {
	message MobBStatTable {
		uint32 Level = 1;
		uint32 Exp = 2;
		uint32 Atk = 3;
		uint32 Def = 4;
		uint32 Hp = 5;
	}
	string TableName = 1;
	repeated MobBStatTable Data = 2;
}

message MobCStat {
	message MobCStatTable {
		uint32 Level = 1;
		uint32 Exp = 2;
		uint32 Atk = 3;
		uint32 Def = 4;
		uint32 Hp = 5;
	}
	string TableName = 1;
	repeated MobCStatTable Data = 2;
}

message Dungeon {
	message DungeonTable {
		uint32 No = 1;
		string Name = 2;
		uint32 Level = 3;
		uint32 Reward = 4;
		uint32 MobALv = 5;
		uint32 MobBLv = 6;
		uint32 MobCLv = 7;
	}
	string TableName = 1;
	repeated DungeonTable Data = 2;
}

message Item {
	message ItemTable {
		uint32 No = 1;
		string Name = 2;
		string Category = 3;
		uint32 CharNo = 4;
		string Stat = 5;
		uint32 Value = 6;
	}
	string TableName = 1;
	repeated ItemTable Data = 2;
}

